--- a/_posts/2022-11-02-Premier-League-Years.html
+++ b/_posts/2022-11-02-Premier-League-Years.html
@@ -10,7 +10,7 @@ excerpt: An interactive visualisation showing historical premier league points t
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
     <title>Premier League Years</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <style>
